static/sass/BV_home_page.sass
@import _BV_variables

body
	background: url("../images/background_home.jpg") no-repeat center top fixed
	background-size: cover

.page-content
	grid-template-rows: $header-height auto $header-height * 2
	grid-template-areas: "header" "content" "footer"

.content
	align-self: center

	text-align: center

	.bookviews-subtitle
		opacity: 0.8
		
		color: $bright

		text-shadow: 0px 0px 10px $darkest

.header
	.dropdown-menu-right
		position: absolute !important
		transform: none !important
		top: unset !important
		right: -21px !important

///////////////////////////////////////////////////////////////////////////////
// Media Queries

// Up to 768px
@media (max-width: 768px)
	body
		background-size: unset

	.search-bar-home
		margin: 0px 40px !important

	.navbar-nav
		.dropdown-menu
			position: absolute

// Up to 534px
@media (max-width: 534px)
	.search-bar-home
		margin: 0px 10px !important

		.input-group
			display: grid
			grid-template-rows: auto auto
			grid-template-areas: "form-control" "input-group-append"
	
			input
				font-size: 1rem

				width: 100%
				
				border-radius: 10px 10px 0 0 !important
				
				padding: 10px 20px

				&::placeholder
					font-size: 1rem

			.input-group-append
				button
					width: 100%
					
					border-radius: 0 0 10px 10px
					
					background-color: #007bff
					
					color: $brightest

					padding: .375rem 1rem

				.fa-search::after
					content: " Search"
					font-family: Open Sans
					font-weight: lighter

// Up to 320px
@media (max-width: 320px)
	.search-bar-home
		.input-group
			input
				font-size: .9rem
				
				&::placeholder
					font-size: .9rem

	.bookviews-logo-big
		font-size: 56px

	.bookviews-subtitle
		font-size: .8rem

		margin-left: 115px
		margin-top: -24px

